# subversion

./: .gitignore  README.md  pyproject.toml
scripts/: run.py
subversion/: adversary.py  judge.py
